solc_ossfuzz_seed_corpus/test_sol/test_94e942473d9f07130c0997f31db0505cf63773450159b4077a971da7b23d23ab_test_sol.sol
contract C{function f() public {assembly{function f() {} f := 1}}}
// ----
// TypeError 2657: (57-58): Assignment requires variable.
